crates/shipper-process/src/snapshots/shipper_process__snapshot_tests__snapshot_publish_args_basic.snap
---
source: crates/shipper-process/src/lib.rs
expression: args
---
- publish
- "--manifest-path"
- crates/foo/Cargo.toml
