crates/shipper-process/src/snapshots/shipper_process__snapshot_tests__snapshot_publish_args_full_flags.snap
---
source: crates/shipper-process/src/lib.rs
expression: args
---
- publish
- "--manifest-path"
- crates/baz/Cargo.toml
- "--registry"
- crates-io
- "--no-verify"
- "--features"
- "serde,tokio"
