crates/shipper-process/src/snapshots/shipper_process__snapshot_tests__snapshot_publish_args_with_registry_and_no_verify.snap
---
source: crates/shipper-process/src/lib.rs
expression: args
---
- publish
- "--manifest-path"
- crates/bar/Cargo.toml
- "--registry"
- my-private-registry
- "--no-verify"
